# jobprotocol

./: LICENSE  jobprotocol.cabal  stack.yaml
src/Network/: JobProtocol.hs
