name:                jobprotocol
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Travis Whitaker, Michael Swan
maintainer:          twhitak@its.jnj.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Network.JobProtocol
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , binary
                     , bytestring
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
